tests/jsx_intrinsics.builtin/jsx_intrinsics.builtin.exp
Error ------------------------------------------------------------------------------------------------------ main.js:9:4

Cannot assign `<CustomComponent />` to `b` because in type argument `ElementType` [1]: `CustomComponent` [2] is
incompatible with `CustomComponentNope` [3]. [incompatible-type]

   main.js:9:4
    9|   <CustomComponent prop="asdf" />; // Error: Bad class type
          ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:51
   58| declare opaque type ExactReactElement_DEPRECATED<+ElementType: React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                         ^^^^^^^^^^^ [1]
   main.js:3:7
    3| class CustomComponent extends React.Component<{prop: string}, void> {}
             ^^^^^^^^^^^^^^^ [2]
   main.js:4:7
    4| class CustomComponentNope extends React.Component<{prop: string}, void> {}
             ^^^^^^^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------------ main.js:9:4

Cannot assign `<CustomComponent />` to `b` because in property `ref` of type argument `P` [1]: [incompatible-type]
 - Either in the first parameter: `CustomComponentNope` [2] is incompatible with `CustomComponent` [3].
 - Or in the first parameter: `CustomComponentNope` [2] is incompatible with null [4].

   main.js:9:4
     9|   <CustomComponent prop="asdf" />; // Error: Bad class type
           ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:84
    58| declare opaque type ExactReactElement_DEPRECATED<+ElementType: React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                                                           ^ [1]
   main.js:4:7
     4| class CustomComponentNope extends React.Component<{prop: string}, void> {}
              ^^^^^^^^^^^^^^^^^^^ [2]
   main.js:3:7
     3| class CustomComponent extends React.Component<{prop: string}, void> {}
              ^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:105:13
   105|     | ((T | null) => mixed)
                    ^^^^ [4]


Error ------------------------------------------------------------------------------------------------------ main.js:9:4

Cannot assign `<CustomComponent />` to `b` because in property `ref` of type argument `P` [1]: [incompatible-type]
 - Either in property `current`: `CustomComponentNope` [2] is incompatible with `CustomComponent` [3].
 - Or in property `current`: `CustomComponentNope` [2] is incompatible with null [4].

   main.js:9:4
     9|   <CustomComponent prop="asdf" />; // Error: Bad class type
           ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:84
    58| declare opaque type ExactReactElement_DEPRECATED<+ElementType: React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                                                           ^ [1]
   main.js:4:7
     4| class CustomComponentNope extends React.Component<{prop: string}, void> {}
              ^^^^^^^^^^^^^^^^^^^ [2]
   main.js:3:7
     3| class CustomComponent extends React.Component<{prop: string}, void> {}
              ^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:104:23
   104|     | { -current: T | null, ... }
                              ^^^^ [4]


Error ----------------------------------------------------------------------------------------------------- main.js:11:4

Cannot assign `<CustomComponent />` to `c` because in type argument `ElementType` [1] > type argument `Props` [2]:
property `prop` is missing in object type [3] but exists in object type [4]. [incompatible-type]

   main.js:11:4
    11|   <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
           ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:51
    58| declare opaque type ExactReactElement_DEPRECATED<+ElementType: React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                          ^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:600:29
   600|     declare class Component<Props, State = void> {
                                    ^^^^^ [2]
   main.js:10:59
    10| var c: ExactReactElement_DEPRECATED<Class<React.Component<{prop1: string}, void>>> =
                                                                  ^^^^^^^^^^^^^^^ [3]
   main.js:3:47
     3| class CustomComponent extends React.Component<{prop: string}, void> {}
                                                      ^^^^^^^^^^^^^^ [4]


Error ----------------------------------------------------------------------------------------------------- main.js:11:4

Cannot assign `<CustomComponent />` to `c` because in type argument `ElementType` [1] > type argument `Props` [2]:
property `prop1` is missing in object type [3] but exists in object type [4]. [incompatible-type]

   main.js:11:4
    11|   <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
           ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:51
    58| declare opaque type ExactReactElement_DEPRECATED<+ElementType: React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                          ^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:600:29
   600|     declare class Component<Props, State = void> {
                                    ^^^^^ [2]
   main.js:3:47
     3| class CustomComponent extends React.Component<{prop: string}, void> {}
                                                      ^^^^^^^^^^^^^^ [3]
   main.js:10:59
    10| var c: ExactReactElement_DEPRECATED<Class<React.Component<{prop1: string}, void>>> =
                                                                  ^^^^^^^^^^^^^^^ [4]


Error ----------------------------------------------------------------------------------------------------- main.js:11:4

Cannot assign `<CustomComponent />` to `c` because in type argument `P` [1]: property `prop1` is missing in props of
class `CustomComponent` [2] but exists in props of statics of `React.Component` [3]. [incompatible-type]

   main.js:11:4
   11|   <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
          ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:84
   58| declare opaque type ExactReactElement_DEPRECATED<+ElementType: React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                                                          ^ [1]
   main.js:3:7
    3| class CustomComponent extends React.Component<{prop: string}, void> {}
             ^^^^^^^^^^^^^^^ [2]
   main.js:10:37
   10| var c: ExactReactElement_DEPRECATED<Class<React.Component<{prop1: string}, void>>> =
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- main.js:11:4

Cannot assign `<CustomComponent />` to `c` because in property `ref` of type argument `P` [1]: [incompatible-type]
 - Either in the first parameter: `Component` [2] is incompatible with `CustomComponent` [3].
 - Or in the first parameter: `Component` [2] is incompatible with null [4].

   main.js:11:4
    11|   <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
           ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:84
    58| declare opaque type ExactReactElement_DEPRECATED<+ElementType: React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                                                           ^ [1]
   main.js:10:43
    10| var c: ExactReactElement_DEPRECATED<Class<React.Component<{prop1: string}, void>>> =
                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   main.js:3:7
     3| class CustomComponent extends React.Component<{prop: string}, void> {}
              ^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:105:13
   105|     | ((T | null) => mixed)
                    ^^^^ [4]


Error ----------------------------------------------------------------------------------------------------- main.js:11:4

Cannot assign `<CustomComponent />` to `c` because in property `ref` of type argument `P` [1]: [incompatible-type]
 - Either in property `current`: `Component` [2] is incompatible with `CustomComponent` [3].
 - Or in property `current`: `Component` [2] is incompatible with null [4].

   main.js:11:4
    11|   <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
           ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:84
    58| declare opaque type ExactReactElement_DEPRECATED<+ElementType: React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                                                           ^ [1]
   main.js:10:43
    10| var c: ExactReactElement_DEPRECATED<Class<React.Component<{prop1: string}, void>>> =
                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   main.js:3:7
     3| class CustomComponent extends React.Component<{prop: string}, void> {}
              ^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:104:23
   104|     | { -current: T | null, ... }
                              ^^^^ [4]



Found 8 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
